...
                    if let response = responseData?.items{
                        items.append(response[index])
                        index += 1
                    }
            }
        } else {
            let alert = UIAlertController(title: "Alert", message: "There is no user with this search", preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { action in
                self.navigationController?.popViewController(animated: true)
            }))
            self.present(alert, animated: true, completion: nil)
        }
        
        
...
