...
                                                        <color key="tintColor" red="0.34509803919999998" green="0.49936504749999999" blue="0.83921568629999999" alpha="0.95475374940000002" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="150" id="HyX-zC-vV5"/>
                                                            <constraint firstAttribute="height" constant="150" id="YRR-E0-C4g"/>
                                                        </constraints>
                                                    </imageView>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search here" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="qHl-O4-vGo">
                                                        <rect key="frame" x="0.0" y="170" width="388" height="50"/>
                                                        <color key="tintColor" red="0.34509803919999998" green="0.49936504749999999" blue="0.83921568629999999" alpha="0.95475374940000002" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="FnA-SY-98N"/>
                                                        </constraints>
                                                        <nil key="textColor"/>
...
                                                        <rect key="frame" x="0.0" y="240" width="388" height="50"/>
                                                        <color key="backgroundColor" red="0.34509803921568627" green="0.49803921568627452" blue="0.83921568627450982" alpha="0.95475374941794289" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="LV8-TM-sVm"/>
                                                        </constraints>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Submit">
                                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </buttonConfiguration>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="5"/>
                                                            </userDefinedRuntimeAttribute>
...
